# zvmail

./: .gitignore  .travis.yml  COPYING  Makefile.am  Makefile.in  README.md  bootstrap.sh  configure  configure.ac  index.html  params.json
build-aux/: headers.py  template.txt
src/: main.cpp
src/base/: imap.cpp  imap.h  messages.cpp  messages.h  tcpclient.cpp  tcpclient.h  types.cpp  types.h
src/utils/: logger.cpp  logger.h  utils.cpp  utils.h
test/: main.cpp  test_imap.h  test_tcpclient.h  test_types.h
